k8s/prometheus-federation/deployments/alertmanager.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      # Used to match pre-existing pods that may be affected during updates.
      run: alertmanager-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  # Pod template.
  template:
    metadata:
      labels:
        # Note: run=alertmanager-server should match a service config with a
        # public IP and port so that it is publically accessible.
        run: alertmanager-server
    spec:
      containers:
      # Check https://hub.docker.com/r/prom/alertmanager/tags/ for the current
      # stable version.
      - image: prom/alertmanager:v0.29.0
        name: alertmanager-server
        args: ["--config.file=/etc/alertmanager/config.yml",
               "--web.external-url=$(ALERTMANAGER_EXTERNAL_URL)",
               "--storage.path=/alertmanager"]
        ports:
          - containerPort: 9093
        resources:
          requests:
            memory: "400Mi"
            cpu: "200m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        volumeMounts:
        # /alertmanager stores alert state, like acks, silences, etc.
        - mountPath: /alertmanager
          name: alertmanager-storage
          subPath: alertmanager-data
        # /etc/alertmanager/config.yml contains the M-Lab alertmanager config.
        - mountPath: /etc/alertmanager
          name: alertmanager-config

      # Check https://ghcr.io/jimmidyson/configmap-reload/tags/ for the current
      # stable version.
      - image: ghcr.io/jimmidyson/configmap-reload:v0.15.0
        name: configmap-reload
        args: ["-webhook-url", "$(ALERTMGR_RELOAD_URL)", "-volume-dir", "/alertmanager-config"]
        resources:
          requests:
            memory: "400Mi"
            cpu: "200m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        volumeMounts:
        # Mount the prometheus config volume so we can watch it for changes.
        - mountPath: /alertmanager-config
          name: alertmanager-config

      # Disks created manually, can be named here explicitly using
      # gcePersistentDisk instead of the persistentVolumeClaim.
      volumes:
      - name: alertmanager-storage
        persistentVolumeClaim:
          claimName: auto-alertmanager-disk0
      - name: alertmanager-config
        configMap:
          name: alertmanager-config
