k8s/prometheus-federation/deployments/bigquery-exporter-discuss.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigquery-exporter-discuss
spec:
  replicas: 1
  selector:
    matchLabels:
      run: bigquery-exporter-discuss
  template:
    metadata:
      labels:
        run: bigquery-exporter-discuss
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: bigquery-exporter
        image: measurementlab/prometheus-bigquery-exporter:v1.2.0
        args: [ "-project=measurement-lab",
                "-refresh=15m",
                # TODO(github.com/m-lab/prometheus-support/issues/894): include discuss@
                # authenticated queries of unified views once they are more efficient.
                "-gauge-query=/queries/bq_daily_discuss.sql",
              ]
        ports:
        - containerPort: 9348
        volumeMounts:
        - mountPath: /queries
          name: bigquery-config
        - name: credentials
          mountPath: /etc/credentials
          readOnly: true
      volumes:
      - name: bigquery-config
        configMap:
          name: bigquery-exporter-config
      - name: credentials
        secret:
          secretName: discuss-credentials
