k8s/prometheus-federation/deployments/kube-state-metrics.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-state-metrics
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: kube-state-metrics
      annotations:
        prometheus.io/scrape: 'false'
    spec:
      nodeSelector:
        prometheus-node: 'true'
      containers:
      - name: kube-state-metrics
        # image: gcr.io/google_containers/kube-state-metrics:v0.5.0
        image: quay.io/coreos/kube-state-metrics:v1.3.1
        args: [
          "--collectors=deployments,nodes,pods,services",
          "--port=8080",
        ]
        ports:
        - containerPort: 8080
