k8s/prometheus-federation/deployments/kubeip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeip
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeip
  template:
      metadata:
        labels:
          app: kubeip
      spec:
        priorityClassName: system-cluster-critical
        containers:
        - name: "kubeip"
          image: doitintl/kubeip:issue-34
          imagePullPolicy: Always
          volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
        restartPolicy: Always
        serviceAccountName: kubeip
        volumes:
          - name: google-cloud-key
            secret:
              secretName: kubeip-key
