k8s/prometheus-federation/deployments/node-exporter.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
spec:
  selector:
    matchLabels:
      run: node-exporter
  template:
    metadata:
      name: node-exporter
      labels:
        run: node-exporter
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: node-exporter
        image: prom/node-exporter:v1.1.2
        args:
        - --collector.processes
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: scrape
      hostNetwork: true
      hostPID: true
      tolerations:
      - key: "outbound-ip"
        operator: "Equal"
        value: "static"
        effect: "NoSchedule"
